// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
<div
  class="wp-components-icon css-9yzi72"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-icon css-mm8iy7"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-icon css-u9uu51"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;
